--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   .btn-red:hover { background:#b91c1c; transform: scale(1.02); }
   .btn-gray { background:#111; padding:12px 24px; border-radius:12px; font-weight:bold; cursor:pointer; transition:0.3s; }
   .btn-gray:hover { background:#222; }
-  .signal-card { padding:30px; border-radius:20px; text-align:center; transition:0.5s; border: 2px solid; animation: slideUp 0.6s ease; }
-  @keyframes slideUp { from { opacity:0; transform:translateY(20px); } to { opacity:1; transform:translateY(0); } }
+  .signal-card { padding:24px; border-radius:16px; text-align:center; transition:0.5s; border: 2px solid; animation: fadeIn 0.5s ease-out; }
+  @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
   input[type="file"]::file-selector-button {
     background: #dc2626; color: white; border: none; padding: 8px 16px; border-radius: 8px; cursor: pointer; margin-right: 15px;
   }
@@ -25,80 +25,78 @@
 
 <div id="page1" class="min-h-screen flex items-center justify-center">
   <div class="glass p-10 w-full max-w-md border border-red-600/30">
-    <h1 class="text-3xl font-black text-red-600 mb-6 text-center tracking-tighter italic">WILLBOOT-PRO</h1>
+    <h1 class="text-3xl font-black text-red-600 mb-6 text-center tracking-tighter">WILLBOOT-PRO</h1>
     <input id="userMain" placeholder="Usuário" class="w-full mb-4 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
     <input id="passMain" type="password" placeholder="Senha" class="w-full mb-6 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
-    <button class="btn-red w-full neon-red mb-4" onclick="loginMain()">🔐 ENTRAR NO SISTEMA</button>
+    <button class="btn-red w-full neon-red mb-4" onclick="loginMain()">🔐 ENTRAR</button>
+    <p class="text-center text-gray-500 text-xs uppercase tracking-widest">Acesso Restrito</p>
   </div>
 </div>
 
-<div id="page2" class="hidden max-w-6xl mx-auto px-6 py-10">
+<div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
   
-  <div class="glass p-8 border border-red-600/20 mb-8">
-    <div class="flex flex-col md:flex-row justify-between items-center gap-6">
-      <div id="clock2" class="text-red-500 font-bold text-2xl tracking-tighter">🕐 00:00:00</div>
-      <div class="flex gap-4">
-        <button class="btn-red neon-red px-12" onclick="analyzeHistory()">📊 ANALISAR</button>
-        <button class="btn-gray" onclick="logoutMain()">SAIR</button>
+  <div class="glass p-6 border border-red-600/20 mb-6">
+    <div class="flex flex-col md:flex-row justify-between items-center mb-6">
+      <div id="clock2" class="text-red-500 font-bold text-2xl tracking-mono">🕐 00:00:00</div>
+      <div class="flex gap-4 mt-4 md:mt-0">
+        <button class="btn-red neon-red px-10" onclick="analyzeHistory()">📊 ANALISAR</button>
+        <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
       </div>
     </div>
 
-    <div class="mt-8 bg-black/60 p-6 rounded-2xl border border-dashed border-gray-800 text-center">
-      <input type="file" id="uploadHistory" accept="image/*" class="text-sm text-gray-500">
-      <p id="historyResult" class="mt-4 text-xs font-bold text-red-500 uppercase tracking-widest"></p>
+    <div class="bg-black/60 p-6 rounded-2xl border border-dashed border-gray-700 text-center">
+      <input type="file" id="uploadHistory" accept="image/*" class="text-sm text-gray-400 mx-auto">
+      <p id="historyResult" class="mt-4 text-xs font-bold uppercase tracking-widest"></p>
     </div>
   </div>
 
-  <div id="signalsPage2" class="flex justify-center min-h-[250px] mb-10">
-    <div class="glass p-16 border border-gray-800 text-center text-gray-600 italic flex items-center">
-      Insira o print do histórico e clique em Analisar
+  <div id="signalsPage2" class="flex justify-center my-10 min-h-[200px]">
+    <div class="glass p-12 border border-gray-800 text-center text-gray-500 italic flex items-center">
+      Selecione o print do histórico e clique em ANALISAR
     </div>
   </div>
 
-  <div class="grid md:grid-cols-2 gap-6 mb-10">
-    <div class="glass p-6 border border-red-600/20">
-        <label class="text-xs text-gray-500 font-bold mb-2 block">PLATAFORMA ATIVA</label>
-        <select id="betHouse" class="w-full p-3 rounded bg-black border border-gray-700 text-sm outline-none">
-          <option value="ElephantBet">ElephantBet</option>
-          <option value="BantuBet">BantuBet</option>
-          <option value="888Bet">888Bet</option>
-          <option value="TopAposta">TopAposta</option>
-        </select>
-    </div>
-    <div class="glass p-6 border border-red-600/20">
-        <h3 class="text-center font-bold mb-4 text-gray-400 uppercase text-xs">Performance da IA</h3>
-        <canvas id="chartPage2" height="100"></canvas>
-    </div>
+  <div class="glass p-6 mb-6 border border-red-600/20">
+    <label class="mb-2 block font-bold text-gray-400 text-xs">PLATAFORMA DE OPERAÇÃO:</label>
+    <select id="betHouse" class="w-full p-3 rounded bg-black border border-gray-700 outline-none">
+      <option value="ElephantBet">ElephantBet</option>
+      <option value="BantuBet">BantuBet</option>
+      <option value="888Bet">888Bet</option>
+      <option value="TopAposta">TopAposta</option>
+    </select>
   </div>
 
-  <div class="glass p-10 border border-red-600/30 text-center">
-    <h2 class="text-3xl font-black text-red-600 mb-2 italic">ダイヤモンド VIP</h2>
-    <p class="text-gray-400 mb-8 text-xs italic uppercase tracking-widest">Sinais Rosa: 10.00x até o infinito</p>
-    <div class="max-w-xs mx-auto space-y-3">
-        <input id="vipUser" placeholder="Usuário VIP" class="w-full p-3 rounded bg-black border border-gray-700 outline-none">
-        <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full p-3 rounded bg-black border border-gray-700 outline-none">
-        <button class="btn-red neon-red w-full" onclick="loginVIP()">ACESSAR PAINEL ROSA</button>
+  <div class="glass p-6 rounded-xl border border-red-600/20">
+    <h3 class="text-center font-bold mb-4 text-gray-300 uppercase text-sm">📊 ASSERTIVIDADE IA (TEMPO REAL)</h3>
+    <canvas id="chartPage2" height="120"></canvas>
+  </div>
+
+  <div class="glass p-8 mt-10 border border-red-600/30 text-center">
+    <h2 class="text-2xl font-black text-red-600 mb-2">💎 ACESSO VIP</h2>
+    <p class="text-gray-400 mb-6 text-xs italic">Sinais Rosa acima de 10.00x com 98% de precisão</p>
+    <div class="max-w-xs mx-auto">
+        <input id="vipUser" placeholder="Usuário VIP" class="w-full mb-2 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
+        <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full mb-4 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
+        <button class="btn-red neon-red w-full" onclick="loginVIP()">🔐 ACESSAR ÁREA VIP</button>
     </div>
   </div>
 </div>
 
-<div id="page3" class="hidden max-w-6xl mx-auto px-6 py-10">
-  <div class="flex justify-between items-center mb-10">
-    <h1 class="text-3xl font-black text-pink-600 tracking-tighter">💎 SINAIS ROSA VIP</h1>
-    <button class="btn-gray text-xs" onclick="location.reload()">VOLTAR</button>
+<div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
+  <div class="flex justify-between items-center mb-8">
+    <h1 class="text-3xl font-black text-pink-600 tracking-tighter">💎 PAINEL VIP ROSA</h1>
+    <button class="btn-gray" onclick="location.reload()">VOLTAR</button>
   </div>
-
-  <div id="signalsVIP" class="flex justify-center mb-10"></div>
-
-  <div class="glass p-8 border border-pink-600/20 relative">
-    <h3 class="text-center font-bold mb-6 text-pink-500 uppercase text-xs tracking-widest">Trajetória Real-Time Rosa</h3>
+  <div id="clock3" class="text-center text-pink-500 font-bold text-xl mb-6"></div>
+  <div id="signalsVIP" class="flex justify-center my-6"></div>
+  <div class="glass p-6 rounded-xl border border-pink-600/20 mb-10">
+    <h3 class="text-center font-bold mb-4 text-pink-300 uppercase text-sm">Gráfico de Histórico Rosa</h3>
     <canvas id="chartVIP" height="120"></canvas>
   </div>
-
-  <div class="glass p-12 border border-pink-600/20 text-center mt-10">
-    <label class="block mb-4 font-bold text-pink-500 text-sm uppercase">Upload Histórico VIP</label>
-    <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-8 mx-auto block">
-    <button class="btn-red neon-red w-full" onclick="analyzeHistoryVIP()">ANALISAR SINAL ROSA</button>
+  <div class="glass p-10 border border-pink-600/20 text-center mt-10">
+    <label class="block mb-4 font-bold text-pink-500 uppercase">Analisar Print para Rosa</label>
+    <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-6 mx-auto block">
+    <button class="btn-red neon-red w-full" onclick="analyzeHistoryVIP()">📊 GERAR SINAL ROSA</button>
     <p id="historyResultVIP" class="mt-4 font-bold text-sm"></p>
   </div>
 </div>
@@ -107,130 +105,132 @@
 const BACKEND_URL = "https://willboot-backend-1.onrender.com";
 
 // Relógio Luanda
-setInterval(() => {
+setInterval(()=>{
   const now = new Date().toLocaleString("pt-PT",{timeZone:"Africa/Luanda"});
   if(document.getElementById("clock2")) document.getElementById("clock2").innerHTML="🕐 "+now;
-}, 1000);
+  if(document.getElementById("clock3")) document.getElementById("clock3").innerHTML="🕐 "+now;
+},1000);
 
-// Login Principal
+// Login
 function loginMain(){
   if(document.getElementById("userMain").value === "admin" && document.getElementById("passMain").value === "1234"){
     localStorage.setItem("mainAccess","true");
     document.getElementById("page1").classList.add("hidden");
     document.getElementById("page2").classList.remove("hidden");
-    updateChartPage2();
-  } else { alert("Acesso Negado."); }
+    loadHistoryPage2();
+  } else { alert("Usuário ou Senha inválidos."); }
 }
 
 function logoutMain(){ localStorage.removeItem("mainAccess"); location.reload(); }
 
-// Gráfico Padrão
-let historyP2 = [70, 85, 90, 80, 95];
-function updateChartPage2(){
-  const ctx = document.getElementById("chartPage2").getContext("2d");
-  new Chart(ctx,{ type:"line", data:{ labels:[1,2,3,4,5], datasets:[{ data:historyP2, borderColor:"#dc2626", tension:0.4, fill:true, backgroundColor:'rgba(220,38,38,0.1)' }] }, options:{plugins:{legend:{display:false}}, scales:{y:{display:false},x:{display:false}}}});
+if(localStorage.getItem("mainAccess") === "true") {
+  window.onload = () => {
+    document.getElementById("page1").classList.add("hidden");
+    document.getElementById("page2").classList.remove("hidden");
+    loadHistoryPage2();
+  };
 }
 
-// ANALISAR
+// Gráficos
+let historyPage2 = [80, 85, 82, 88, 90];
+let chartPage2Obj;
+function loadHistoryPage2(){ updateChartPage2(); }
+function updateChartPage2(){
+  const ctx = document.getElementById("chartPage2").getContext("2d");
+  if(chartPage2Obj) chartPage2Obj.destroy();
+  chartPage2Obj = new Chart(ctx,{
+    type:"line",
+    data:{
+      labels:historyPage2.map((_,i)=>i+1),
+      datasets:[{ data:historyPage2, borderColor:"#dc2626", tension:.4, fill:true, backgroundColor: 'rgba(220, 38, 38, 0.1)' }]
+    },
+    options:{plugins:{legend:{display:false}}, scales:{y:{min:0,max:100}}}
+  });
+}
+
+// Analisar
 async function analyzeHistory(){
-  const file = document.getElementById("uploadHistory").files[0];
-  const resText = document.getElementById("historyResult");
+  const fileInput = document.getElementById("uploadHistory");
+  const resultText = document.getElementById("historyResult");
   const signalsDiv = document.getElementById("signalsPage2");
 
-  if(!file) { alert("Selecione a imagem primeiro!"); return; }
-  resText.innerHTML = "🔍 PROCESSANDO DADOS...";
-
+  if(!fileInput.files[0]){ alert("Selecione uma imagem!"); return; }
+  resultText.innerHTML = "<span class='text-blue-400 animate-pulse'>⚡ ANALISANDO HISTÓRICO...</span>";
+  
   const formData = new FormData();
-  formData.append("file", file);
+  formData.append("file", fileInput.files[0]);
 
   try {
     const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST", body: formData });
     const data = await res.json();
     const mult = parseFloat(data.analysis?.mult || 1.0);
-    const conf = data.analysis?.confianca || 90;
+    const conf = data.analysis?.confianca || 85;
+
+    let sinalTipo = "";
+    let classeCor = "";
 
     if(mult < 2.0) {
-      signalsDiv.innerHTML = `<div class="signal-card glass border-cyan-500 text-cyan-400 w-full max-w-sm bg-cyan-950/10">
-        <h3 class="font-bold text-sm mb-2 uppercase">Sinal Azul</h3>
-        <div class="text-7xl font-black text-white mb-2">×${mult.toFixed(2)}</div>
-        <p class="text-xs">Probabilidade: ${conf}% | Alcance: 1.99x</p>
-      </div>`;
+      sinalTipo = "AZUL";
+      classeCor = "border-cyan-500 text-cyan-400";
     } else if(mult >= 2.0 && mult < 10.0) {
-      signalsDiv.innerHTML = `<div class="signal-card glass border-purple-600 text-purple-400 w-full max-w-sm bg-purple-950/10">
-        <h3 class="font-bold text-sm mb-2 uppercase">Sinal Roxo</h3>
-        <div class="text-7xl font-black text-white mb-2">×${mult.toFixed(2)}</div>
-        <p class="text-xs">Probabilidade: ${conf}% | Alcance: 9.99x</p>
-      </div>`;
+      sinalTipo = "ROXO";
+      classeCor = "border-purple-600 text-purple-400";
     } else {
-      // REGRA ROSA RETIFICADA (10.00x+)
-      signalsDiv.innerHTML = `<div class="signal-card glass border-pink-600 text-pink-500 w-full max-w-md bg-pink-950/20">
-        <h3 class="font-bold text-sm mb-2 uppercase tracking-widest">Sinal Rosa Detectado</h3>
-        <div class="text-5xl font-black text-white mb-4 italic">ACESSE A VIP</div>
-        <p class="text-xs text-gray-400">Multiplicadores acima de 10.00x são exclusivos.</p>
-      </div>`;
+      sinalTipo = "ROSA";
+      classeCor = "border-pink-600 text-pink-500";
     }
-    resText.innerHTML = "✅ CONCLUÍDO";
-  } catch(e) { resText.innerHTML = "⚠️ TENTE NOVAMENTE"; }
+
+    resultText.innerHTML = "<span class='text-green-500'>✅ ANÁLISE CONCLUÍDA</span>";
+    
+    if(sinalTipo === "ROSA") {
+        signalsDiv.innerHTML = `<div class="signal-card glass border-pink-600 bg-pink-950/20 w-full max-w-md">
+            <h3 class="font-black text-pink-500 text-xl mb-2">🚀 SINAL ROSA DETECTADO</h3>
+            <div class="text-4xl font-black text-white">×10.00+</div>
+        </div>`;
+    } else {
+        signalsDiv.innerHTML = `<div class="signal-card glass ${classeCor} w-full max-w-md bg-black/40">
+            <h3 class="font-black text-2xl mb-4 uppercase">SINAL ${sinalTipo}</h3>
+            <div class="text-7xl font-black mb-4 text-white">×${mult.toFixed(2)}</div>
+            <p class="text-xs text-gray-400">PROBABILIDADE IA: ${conf}%</p>
+        </div>`;
+    }
+    historyPage2.push(conf);
+    updateChartPage2();
+  } catch(e) { resultText.innerHTML = "<span class='text-red-500'>⚠️ ERRO NO SERVIDOR</span>"; }
 }
 
-// VIP Login
+// VIP
 function loginVIP(){
   if(document.getElementById("vipUser").value === "William" && document.getElementById("vipPass").value === "230220"){
     document.getElementById("page2").classList.add("hidden");
     document.getElementById("page3").classList.remove("hidden");
     updateChartVIP();
-  } else { alert("Dados VIP Incorretos!"); }
+  } else { alert("Acesso VIP negado."); }
 }
 
-// Gráfico Surrealista com Avião
+let historyVIP = [95, 98, 97, 99];
+let chartVIPObj;
 function updateChartVIP(){
   const ctx = document.getElementById("chartVIP").getContext("2d");
-  const aviatorIcon = new Image();
-  aviatorIcon.src = 'https://i.postimg.cc/85zM6D6H/aviator-plane.png'; // Link genérico para ícone de avião
-
-  new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: [1, 2, 3, 4, 5, 6],
-      datasets: [{
-        label: 'Rosa Flow',
-        data: [10, 25, 15, 40, 30, 60],
-        borderColor: '#ec4899',
-        borderWidth: 4,
-        pointStyle: aviatorIcon,
-        pointRadius: 10,
-        tension: 0.4,
-        fill: true,
-        backgroundColor: (context) => {
-          const chart = context.chart;
-          const {ctx, chartArea} = chart;
-          if (!chartArea) return null;
-          const gradient = ctx.createLinearGradient(0, chartArea.bottom, 0, chartArea.top);
-          gradient.addColorStop(0, 'transparent');
-          gradient.addColorStop(1, 'rgba(236, 72, 153, 0.2)');
-          return gradient;
-        }
-      }]
-    },
-    options: { plugins:{ legend:{display:false} }, scales:{ x:{display:false}, y:{display:false} } }
-  });
+  if(chartVIPObj) chartVIPObj.destroy();
+  chartVIPObj = new Chart(ctx,{ type:"line", data:{ labels:historyVIP.map((_,i)=>i+1), datasets:[{ data:historyVIP, borderColor:"#db2777", tension: 0.4, fill:true }] } });
 }
 
 async function analyzeHistoryVIP(){
   const resVIP = document.getElementById("historyResultVIP");
-  resVIP.innerHTML = "<span class='text-pink-500'>🚀 MAPEANDO ROSA...</span>";
+  if(!document.getElementById("uploadHistoryVIP").files[0]) return;
+  resVIP.innerHTML = "<span class='text-pink-500 animate-pulse'>💎 MAPEANDO ROSA...</span>";
   try {
     const fd = new FormData(); fd.append("file", document.getElementById("uploadHistoryVIP").files[0]);
     const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST", body: fd });
     const data = await res.json();
     const mult = parseFloat(data.analysis?.mult || 10.0);
-    document.getElementById("signalsVIP").innerHTML = `
-      <div class="signal-card glass border-pink-500 p-16 text-center bg-pink-950/30 w-full max-w-xl">
-        <h2 class="text-pink-500 font-black text-2xl italic mb-4">CONFIRMADO × ROSA</h2>
-        <div class="text-9xl font-black text-white drop-shadow-[0_0_20px_rgba(236,72,153,0.8)]">×${mult.toFixed(2)}</div>
-        <p class="mt-6 text-pink-300 font-bold uppercase tracking-widest animate-pulse">Entrada Imediata</p>
+    document.getElementById("signalsVIP").innerHTML = `<div class="signal-card glass border-pink-500 p-16 text-center bg-pink-950/30 w-full max-w-xl">
+        <h2 class="text-pink-500 font-black text-2xl mb-4 uppercase">Rosa Confirmado</h2>
+        <div class="text-9xl font-black text-white">×${mult.toFixed(2)}</div>
       </div>`;
-    resVIP.innerHTML = "✅ SINAL GERADO COM SUCESSO";
+    historyVIP.push(99); updateChartVIP();
+    resVIP.innerHTML = "SINAL GERADO!";
   } catch(e){ resVIP.innerHTML = "Erro VIP."; }
 }
 </script>
