--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   .feedback-btn { padding: 8px 16px; border-radius: 8px; font-size: 10px; font-weight: bold; cursor: pointer; transition: 0.2s; text-transform: uppercase; }
   .btn-green { background: #16a34a; color: white; }
   .btn-fail { background: #991b1b; color: white; }
-  .clock-display { font-family: monospace; font-weight: bold; color: #dc2626; letter-spacing: 2px; }
+  .clock-display { font-family: monospace; font-weight: bold; letter-spacing: 2px; }
 </style>
 </head>
 <body>
@@ -36,20 +36,16 @@
   </div>
 </div>
 
-<div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10">
-  <div class="flex justify-center mb-6">
-    <div id="clock2" class="clock-display text-3xl">00:00:00</div>
+<div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10 text-center">
+  <div id="clock2" class="clock-display text-red-600 text-4xl mb-6">00:00:00</div>
+
+  <div class="flex justify-center gap-4 mb-6">
+    <button class="btn-red neon-red px-10" onclick="analyzeHistory()">📊 ANALISAR</button>
+    <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
   </div>
 
-  <div class="glass p-6 border border-red-600/20 mb-6">
-    <div class="flex justify-between items-center mb-6">
-      <div class="text-xs uppercase font-bold text-gray-500">Painel de Controle</div>
-      <div class="flex gap-4">
-        <button class="btn-red neon-red px-10" onclick="analyzeHistory()">📊 ANALISAR</button>
-        <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
-      </div>
-    </div>
-    <div class="bg-black/60 p-4 rounded-2xl border border-dashed border-gray-700 text-center">
+  <div class="glass p-6 border border-red-600/20 mb-6 max-w-2xl mx-auto">
+    <div class="bg-black/60 p-4 rounded-2xl border border-dashed border-gray-700">
       <input type="file" id="uploadHistory" accept="image/*" class="text-sm text-gray-400">
       <p id="historyResult" class="mt-2 text-xs font-bold uppercase"></p>
     </div>
@@ -57,7 +53,7 @@
 
   <div id="signalsPage2" class="flex flex-col items-center my-10 min-h-[200px]"></div>
 
-  <div class="grid md:grid-cols-2 gap-6 mb-6">
+  <div class="grid md:grid-cols-2 gap-6 mb-6 text-left">
     <div class="glass p-6 border border-red-600/20 text-center">
       <p class="text-[10px] text-gray-500 uppercase mb-2">Assertividade da IA em Tempo Real</p>
       <canvas id="chartPage2" height="120"></canvas>
@@ -82,21 +78,21 @@
   </div>
 </div>
 
-<div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10">
-  <div class="flex justify-center mb-6">
-    <div id="clock3" class="clock-display text-pink-500 text-4xl">00:00:00</div>
-  </div>
+<div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10 text-center">
+  <div id="clock3" class="clock-display text-pink-500 text-5xl mb-6">00:00:00</div>
 
-  <div class="flex justify-between items-center mb-8">
+  <div class="flex justify-between items-center mb-8 text-left">
     <h1 class="text-3xl font-black text-pink-600 italic">💎 PAINEL VIP</h1>
     <button class="btn-gray text-xs" onclick="backToP2()">⬅️ VOLTAR</button>
   </div>
   
   <div id="signalsVIP" class="w-full flex flex-col items-center mb-8"></div>
+  
   <div class="glass p-6 rounded-xl border border-pink-600/20 mb-8 bg-black/40">
     <canvas id="chartVIP" height="130"></canvas>
   </div>
-  <div class="glass p-10 border border-pink-600/20 text-center">
+
+  <div class="glass p-10 border border-pink-600/20">
     <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-6 mx-auto block">
     <button class="btn-red neon-red w-full" onclick="analyzeHistoryVIP()">📊 GERAR SINAL ROSA IA</button>
     <p id="historyResultVIP" class="mt-4 font-bold text-sm"></p>
@@ -118,6 +114,16 @@ function loginMain(){
     document.getElementById("page2").classList.remove("hidden");
     updateChartPage2();
   } else { alert("Acesso Negado."); }
+}
+
+function loginVIP(){
+  const u = document.getElementById("vipUser").value;
+  const p = document.getElementById("vipPass").value;
+  if(u === "William" && p === "230220"){
+    document.getElementById("page2").classList.add("hidden");
+    document.getElementById("page3").classList.remove("hidden");
+    updateChartVIP(12.5);
+  } else { alert("Acesso VIP Inválido."); }
 }
 
 function logoutMain(){ location.reload(); }
@@ -150,7 +156,7 @@ function updateChartVIP(targetMult = 10) {
   });
 }
 
-async function sendFeedback(status) {
+function sendFeedback(status) {
   alert("IA Notificada: Resultado " + (status === 'win' ? "Green" : "Red") + ". O algoritmo foi ajustado.");
 }
 
@@ -183,7 +189,7 @@ async function analyzeHistory(){
         </div>
       </div>`;
     
-    document.getElementById("iaStatusMsg").innerHTML = `"Padrão ${txt} detectado. Memória de histórico atualizada."`;
+    document.getElementById("iaStatusMsg").innerHTML = `"Análise concluída. Padrão ${txt} detectado."`;
     updateChartPage2(mult);
     resText.innerHTML = "✅ CONCLUÍDO";
   } catch(e) { resText.innerHTML = "⚠️ ERRO NO SERVIDOR"; }
@@ -207,4 +213,16 @@ async function analyzeHistoryVIP(){
       <div class="signal-card glass border-pink-500 p-8 text-center bg-pink-950/30 w-full max-w-md">
         <h2 class="text-pink-500 font-black text-xl mb-2 italic">💎 ENTRADA ROSA</h2>
         <div class="text-7xl font-black text-white">×${mult.toFixed(2)}</div>
-        
+        <p class="text-xs mt-3 text-pink-300 font-bold uppercase mb-4">ALCANCE IA: ${(mult * 1.3).toFixed(2)}x</p>
+        <div class="flex justify-center gap-3">
+          <button class="feedback-btn btn-green" onclick="sendFeedback('win')">✅ Green</button>
+          <button class="feedback-btn btn-fail" onclick="sendFeedback('loss')">❌ Red</button>
+        </div>
+      </div>`;
+    updateChartVIP(mult);
+    resVIP.innerHTML = "✅ SINAL ROSA GERADO";
+  } catch(e){ resVIP.innerHTML = "Erro."; }
+}
+</script>
+</body>
+</html>
