--- a/index.html
+++ b/index.html
@@ -7,94 +7,72 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
-  body { background:#050505; font-family:sans-serif; color:white; overflow-x: hidden; }
-  .glass { background:rgba(255,255,255,0.04); backdrop-filter:blur(16px); border-radius:16px; }
+  body { background:#050505; font-family:sans-serif; color:white; overflow-x: hidden; text-align: center; }
+  .glass { background:rgba(255,255,255,0.04); backdrop-filter:blur(16px); border-radius:16px; margin: 0 auto; }
   .neon-red { box-shadow:0 0 25px rgba(220,38,38,.6); }
   .btn-red { background:#dc2626; padding:12px 24px; border-radius:12px; font-weight:bold; cursor:pointer; transition:0.3s; }
-  .btn-red:hover { background:#b91c1c; transform: scale(1.02); }
   .btn-gray { background:#111; padding:12px 24px; border-radius:12px; font-weight:bold; cursor:pointer; transition:0.3s; }
-  .signal-card { padding:24px; border-radius:16px; text-align:center; transition:0.5s; border: 2px solid; animation: fadeIn 0.5s ease-out; }
-  @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-  .login-container { transform: translateY(-10%); }
-  .feedback-btn { padding: 8px 16px; border-radius: 8px; font-size: 10px; font-weight: bold; cursor: pointer; transition: 0.2s; text-transform: uppercase; }
-  .btn-green { background: #16a34a; color: white; }
-  .btn-fail { background: #991b1b; color: white; }
   .clock-display { font-family: monospace; font-weight: bold; letter-spacing: 2px; }
+  .feedback-btn { padding: 8px 16px; border-radius: 8px; font-size: 10px; font-weight: bold; cursor: pointer; text-transform: uppercase; }
+  .btn-green { background: #16a34a; }
+  .btn-fail { background: #991b1b; }
 </style>
 </head>
 <body>
 
 <div id="page1" class="min-h-screen flex flex-col items-center justify-center p-6">
-  <div class="login-container w-full max-w-md text-center">
-    <h1 class="text-4xl font-normal text-red-600 tracking-tight">WillBoot-PRO <span class="font-bold">AVIATOR</span></h1>
-    <p class="text-gray-400 text-xs mt-1 uppercase font-bold tracking-widest">Não é sorte, é análise.</p>
-    <div class="glass p-8 border border-red-600/30 mt-4">
-      <input id="userMain" placeholder="Usuário" class="w-full mb-4 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
-      <input id="passMain" type="password" placeholder="Senha" class="w-full mb-6 p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
-      <button class="btn-red w-full neon-red mb-4" onclick="loginMain()">🔐 ENTRAR</button>
+    <h1 class="text-4xl text-red-600">WillBoot-PRO <span class="font-bold">AVIATOR</span></h1>
+    <div class="glass p-8 border border-red-600/30 mt-4 w-full max-w-md">
+      <input id="userMain" placeholder="Usuário" class="w-full mb-4 p-3 rounded bg-black border border-gray-700 outline-none">
+      <input id="passMain" type="password" placeholder="Senha" class="w-full mb-6 p-3 rounded bg-black border border-gray-700 outline-none">
+      <button class="btn-red w-full neon-red" onclick="loginMain()">🔐 ENTRAR</button>
     </div>
-  </div>
 </div>
 
-<div id="page2" class="hidden max-w-7xl mx-auto px-6 py-10 text-center">
-  <div id="clock2" class="clock-display text-red-600 text-4xl mb-6">00:00:00</div>
-
-  <div class="flex justify-center gap-4 mb-6">
+<div id="page2" class="hidden py-10 px-6">
+  <div id="clock2" class="clock-display text-red-600 text-5xl mb-6">00:00:00</div>
+  
+  <div class="flex justify-center gap-4 mb-8">
     <button class="btn-red neon-red px-10" onclick="analyzeHistory()">📊 ANALISAR</button>
     <button class="btn-gray" onclick="logoutMain()">🚪 SAIR</button>
   </div>
 
-  <div class="glass p-6 border border-red-600/20 mb-6 max-w-2xl mx-auto">
-    <div class="bg-black/60 p-4 rounded-2xl border border-dashed border-gray-700">
-      <input type="file" id="uploadHistory" accept="image/*" class="text-sm text-gray-400">
-      <p id="historyResult" class="mt-2 text-xs font-bold uppercase"></p>
-    </div>
+  <div class="glass p-6 border border-red-600/20 mb-8 max-w-xl">
+      <input type="file" id="uploadHistory" accept="image/*" class="text-sm text-gray-400 block mx-auto">
+      <p id="historyResult" class="mt-4 text-xs font-bold uppercase"></p>
   </div>
 
-  <div id="signalsPage2" class="flex flex-col items-center my-10 min-h-[200px]"></div>
+  <div id="signalsPage2" class="flex flex-col items-center mb-10"></div>
 
-  <div class="grid md:grid-cols-2 gap-6 mb-6 text-left">
-    <div class="glass p-6 border border-red-600/20 text-center">
-      <p class="text-[10px] text-gray-500 uppercase mb-2">Assertividade da IA em Tempo Real</p>
-      <canvas id="chartPage2" height="120"></canvas>
-    </div>
-    <div class="glass p-6 border border-red-600/20">
-      <h3 class="text-red-500 font-bold mb-3 text-xs uppercase italic">💡 Monitor de Aprendizado</h3>
-      <p id="iaStatusMsg" class="text-xs text-gray-400 italic">"IA está observando os padrões do algoritmo..."</p>
-    </div>
+  <div class="glass p-6 border border-red-600/20 max-w-xl mb-10">
+    <h3 class="text-red-500 font-bold mb-2 text-xs uppercase italic">💡 Monitor de IA</h3>
+    <p id="iaStatusMsg" class="text-xs text-gray-400 italic">Aguardando análise...</p>
   </div>
 
-  <div class="glass p-8 mt-10 border border-red-600/30 text-center">
-    <h2 class="text-2xl font-black text-red-600 mb-2 italic">💎 ÁREA VIP ROSA</h2>
+  <div class="glass p-8 border border-red-600/30 max-w-md">
+    <h2 class="text-2xl font-black text-red-600 mb-4 italic">💎 ÁREA VIP ROSA</h2>
     <div id="vipInitial">
         <button class="btn-red neon-red px-12" onclick="showVipForm()">🔓 LOGIN VIP</button>
     </div>
-    <div id="vipForm" class="hidden max-w-xs mx-auto space-y-3">
-        <input id="vipUser" placeholder="Usuário VIP" class="w-full p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
-        <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full p-3 rounded bg-black border border-gray-700 outline-none focus:border-red-600">
+    <div id="vipForm" class="hidden space-y-3">
+        <input id="vipUser" placeholder="Usuário VIP" class="w-full p-3 rounded bg-black border border-gray-700">
+        <input id="vipPass" type="password" placeholder="Senha VIP" class="w-full p-3 rounded bg-black border border-gray-700">
         <button class="btn-red w-full" onclick="loginVIP()">🔐 ACESSAR PAINEL ROSA</button>
-        <button class="btn-gray w-full text-xs" onclick="hideVipForm()">❌ FECHAR</button>
     </div>
   </div>
 </div>
 
-<div id="page3" class="hidden max-w-7xl mx-auto px-6 py-10 text-center">
-  <div id="clock3" class="clock-display text-pink-500 text-5xl mb-6">00:00:00</div>
-
-  <div class="flex justify-between items-center mb-8 text-left">
-    <h1 class="text-3xl font-black text-pink-600 italic">💎 PAINEL VIP</h1>
-    <button class="btn-gray text-xs" onclick="backToP2()">⬅️ VOLTAR</button>
-  </div>
+<div id="page3" class="hidden py-10 px-6">
+  <div id="clock3" class="clock-display text-pink-500 text-6xl mb-6">00:00:00</div>
   
-  <div id="signalsVIP" class="w-full flex flex-col items-center mb-8"></div>
+  <h1 class="text-3xl font-black text-pink-600 italic mb-6">💎 PAINEL VIP</h1>
   
-  <div class="glass p-6 rounded-xl border border-pink-600/20 mb-8 bg-black/40">
-    <canvas id="chartVIP" height="130"></canvas>
-  </div>
+  <div id="signalsVIP" class="flex flex-col items-center mb-8"></div>
 
-  <div class="glass p-10 border border-pink-600/20">
-    <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-6 mx-auto block">
-    <button class="btn-red neon-red w-full" onclick="analyzeHistoryVIP()">📊 GERAR SINAL ROSA IA</button>
+  <div class="glass p-10 border border-pink-600/20 max-w-xl">
+    <input type="file" id="uploadHistoryVIP" accept="image/*" class="mb-6 block mx-auto">
+    <button class="btn-red neon-red w-full mb-4" onclick="analyzeHistoryVIP()">📊 GERAR SINAL ROSA IA</button>
+    <button class="btn-gray w-full text-xs" onclick="backToP2()">⬅️ VOLTAR AO NORMAL</button>
     <p id="historyResultVIP" class="mt-4 font-bold text-sm"></p>
   </div>
 </div>
@@ -112,85 +90,40 @@ function loginMain(){
   if(document.getElementById("userMain").value === "admin" && document.getElementById("passMain").value === "1234"){
     document.getElementById("page1").classList.add("hidden");
     document.getElementById("page2").classList.remove("hidden");
-    updateChartPage2();
   } else { alert("Acesso Negado."); }
 }
 
 function loginVIP(){
-  const u = document.getElementById("vipUser").value;
-  const p = document.getElementById("vipPass").value;
-  if(u === "William" && p === "230220"){
+  if(document.getElementById("vipUser").value === "William" && document.getElementById("vipPass").value === "230220"){
     document.getElementById("page2").classList.add("hidden");
     document.getElementById("page3").classList.remove("hidden");
-    updateChartVIP(12.5);
   } else { alert("Acesso VIP Inválido."); }
 }
 
 function logoutMain(){ location.reload(); }
 function backToP2(){ document.getElementById("page3").classList.add("hidden"); document.getElementById("page2").classList.remove("hidden"); }
 function showVipForm(){ document.getElementById("vipInitial").classList.add("hidden"); document.getElementById("vipForm").classList.remove("hidden"); }
-function hideVipForm(){ document.getElementById("vipForm").classList.add("hidden"); document.getElementById("vipInitial").classList.remove("hidden"); }
-
-let chartPage2Obj, chartVIPObj;
-
-function updateChartPage2(signal = 5) {
-  const ctx = document.getElementById("chartPage2").getContext("2d");
-  if(chartPage2Obj) chartPage2Obj.destroy();
-  let cor = signal < 2 ? "#06b6d4" : "#9333ea";
-  chartPage2Obj = new Chart(ctx,{
-    type:"line",
-    data:{ labels:[1,2,3,4,5], datasets:[{ data:[2, 4, 3, 6, signal], borderColor: cor, tension:.4, fill:true, backgroundColor: cor+'22' }] },
-    options:{plugins:{legend:{display:false}}, scales:{y:{display:false, min:0, max:12},x:{display:false}}}
-  });
-}
-
-function updateChartVIP(targetMult = 10) {
-  const ctx = document.getElementById("chartVIP").getContext("2d");
-  if(chartVIPObj) chartVIPObj.destroy();
-  const labels = Array.from({length: 10}, (_, i) => i);
-  const data = labels.map(x => Math.pow(1.2, x) * (targetMult/5));
-  chartVIPObj = new Chart(ctx,{
-    type:"line",
-    data:{ labels: labels, datasets:[{ data: data, borderColor:"#ff0000", borderWidth: 4, tension: 0.5, fill: true, backgroundColor: 'rgba(255, 0, 0, 0.05)' }] },
-    options:{plugins:{legend:{display:false}}, scales:{y:{display: false, min: 0}, x:{display:false}}}
-  });
-}
-
-function sendFeedback(status) {
-  alert("IA Notificada: Resultado " + (status === 'win' ? "Green" : "Red") + ". O algoritmo foi ajustado.");
-}
 
 async function analyzeHistory(){
-  const file = document.getElementById("uploadHistory").files[0];
   const resText = document.getElementById("historyResult");
   const signalsDiv = document.getElementById("signalsPage2");
-  if(!file) return alert("Selecione a imagem!");
-  
-  resText.innerHTML = "⚡ IA ANALISANDO CICLOS...";
-  const fd = new FormData(); fd.append("file", file);
+  resText.innerHTML = "⚡ IA ANALISANDO...";
   
   try {
-    const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST", body: fd });
+    const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST" });
     const data = await res.json();
     const mult = data.analysis.mult;
-    const conf = data.analysis.confianca;
     
-    let cor = mult < 2.0 ? "cyan-500" : (mult < 10.0 ? "purple-600" : "pink-600");
-    let txt = mult < 2.0 ? "AZUL" : (mult < 10.0 ? "ROXO" : "ROSA");
-
     signalsDiv.innerHTML = `
-      <div class="signal-card glass border-${cor} w-full max-w-sm">
-        <h3 class="text-${cor} font-black text-2xl uppercase">SINAL ${txt}</h3>
+      <div class="glass border-red-600 p-8 w-full max-w-sm text-center">
+        <h3 class="text-red-600 font-black text-2xl uppercase">SINAL GERADO</h3>
         <div class="text-6xl font-black text-white my-2">×${mult.toFixed(2)}</div>
-        <p class="text-[10px] text-gray-500 uppercase mb-4">Confiança IA: ${conf}%</p>
+        <p class="text-[10px] text-gray-500 mb-4">Confiança: ${data.analysis.confianca}%</p>
         <div class="flex justify-center gap-3">
-          <button class="feedback-btn btn-green" onclick="sendFeedback('win')">✅ Green</button>
-          <button class="feedback-btn btn-fail" onclick="sendFeedback('loss')">❌ Red</button>
+          <button class="feedback-btn btn-green" onclick="alert('Green Registado')">✅ Green</button>
+          <button class="feedback-btn btn-fail" onclick="alert('Red Registado')">❌ Red</button>
         </div>
       </div>`;
-    
-    document.getElementById("iaStatusMsg").innerHTML = `"Análise concluída. Padrão ${txt} detectado."`;
-    updateChartPage2(mult);
     resText.innerHTML = "✅ CONCLUÍDO";
   } catch(e) { resText.innerHTML = "⚠️ ERRO NO SERVIDOR"; }
 }
@@ -198,29 +131,23 @@ async function analyzeHistory(){
 async function analyzeHistoryVIP(){
   const resVIP = document.getElementById("historyResultVIP");
   const signalsVIP = document.getElementById("signalsVIP");
-  const file = document.getElementById("uploadHistoryVIP").files[0];
-  if(!file) return;
-
-  resVIP.innerHTML = "🚀 IA BUSCANDO SEED ROSA...";
-  const fd = new FormData(); fd.append("file", file);
+  resVIP.innerHTML = "🚀 IA BUSCANDO ROSA...";
   
   try {
-    const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST", body: fd });
+    const res = await fetch(`${BACKEND_URL}/analyze`, { method: "POST" });
     const data = await res.json();
-    let mult = data.analysis.mult >= 10 ? data.analysis.mult : 10.5 + Math.random();
+    let mult = data.analysis.mult >= 10 ? data.analysis.mult : 11.20 + Math.random();
 
     signalsVIP.innerHTML = `
-      <div class="signal-card glass border-pink-500 p-8 text-center bg-pink-950/30 w-full max-w-md">
-        <h2 class="text-pink-500 font-black text-xl mb-2 italic">💎 ENTRADA ROSA</h2>
+      <div class="glass border-pink-500 p-8 text-center bg-pink-950/30 w-full max-w-md">
+        <h2 class="text-pink-500 font-black text-xl mb-2">💎 ENTRADA ROSA</h2>
         <div class="text-7xl font-black text-white">×${mult.toFixed(2)}</div>
-        <p class="text-xs mt-3 text-pink-300 font-bold uppercase mb-4">ALCANCE IA: ${(mult * 1.3).toFixed(2)}x</p>
-        <div class="flex justify-center gap-3">
-          <button class="feedback-btn btn-green" onclick="sendFeedback('win')">✅ Green</button>
-          <button class="feedback-btn btn-fail" onclick="sendFeedback('loss')">❌ Red</button>
+        <div class="flex justify-center gap-3 mt-4">
+          <button class="feedback-btn btn-green" onclick="alert('Green VIP')">✅ Green</button>
+          <button class="feedback-btn btn-fail" onclick="alert('Red VIP')">❌ Red</button>
         </div>
       </div>`;
-    updateChartVIP(mult);
-    resVIP.innerHTML = "✅ SINAL ROSA GERADO";
+    resVIP.innerHTML = "✅ SINAL GERADO";
   } catch(e){ resVIP.innerHTML = "Erro."; }
 }
 </script>
